feat(ContractService): add ContractPage record and findPage method
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>